[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "A CLI tool for converting various file formats to Markdown"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "converter", "cli"]
license = "MIT"
name = "mq-conv"
readme = "README.md"
repository = "https://github.com/harehare/mq-conv"
version = "0.1.4"

[[bin]]
name = "mq-conv"
path = "src/main.rs"

[lib]
name = "mq_conv"
path = "src/lib.rs"

[features]
audio = ["dep:lofty"]
csv = ["dep:csv"]
default = [
  "excel",
  "pdf",
  "powerpoint",
  "word",
  "image",
  "zip",
  "epub",
  "audio",
  "csv",
  "html",
  "json",
  "yaml",
  "toml_conv",
  "xml",
  "sqlite",
  "tar",
  "video",
  "markdown_docx",
  "markdown_html",
  "markdown_text",
  "markdown_latex",
  "markdown_rst",
  "markdown_asciidoc",
  "markdown_org",
  "markdown_epub_out",
  "markdown_json_ast",
]
epub = ["dep:zip", "dep:quick-xml", "dep:mq-markdown"]
excel = ["dep:calamine"]
html = ["dep:mq-markdown"]
image = ["dep:image", "dep:kamadak-exif"]
json = ["dep:serde_json"]
markdown_asciidoc = ["dep:mq-markdown"]
markdown_docx = ["dep:docx-rs", "dep:mq-markdown"]
markdown_epub_out = ["dep:epub-builder", "dep:mq-markdown"]
markdown_html = ["dep:mq-markdown"]
markdown_json_ast = ["dep:serde_json", "dep:mq-markdown"]
markdown_latex = ["dep:mq-markdown"]
markdown_org = ["dep:mq-markdown"]
markdown_rst = ["dep:mq-markdown"]
markdown_text = ["dep:mq-markdown"]
ocr = ["dep:leptess"]
pdf = ["dep:pdf-extract", "dep:lopdf"]
powerpoint = ["dep:zip", "dep:quick-xml"]
sqlite = ["dep:rusqlite"]
tar = ["dep:tar", "dep:flate2"]
toml_conv = ["dep:toml"]
video = ["dep:lofty"]
word = ["dep:zip", "dep:quick-xml"]
xml = ["dep:quick-xml"]
yaml = ["dep:serde_yaml"]
zip = ["dep:zip"]

[dependencies]
clap = {version = "4.6", features = ["derive"]}
miette = {version = "7", features = ["fancy"]}
thiserror = "2"

calamine = {version = "0.34", optional = true}
csv = {version = "1", optional = true}
docx-rs = {version = "0.4", optional = true}
epub-builder = {version = "0.8", optional = true}
flate2 = {version = "1", optional = true}
image = {version = "0.25", optional = true, default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "tiff"]}
kamadak-exif = {version = "0.6", optional = true}
leptess = {version = "0.14", optional = true}
lofty = {version = "0.24", optional = true}
lopdf = {version = "0.40", optional = true}
mq-markdown = {version = "0.5.26", optional = true, features = ["html-to-markdown", "json"]}
pdf-extract = {version = "0.10", optional = true}
quick-xml = {version = "0.39", optional = true}
rusqlite = {version = "0.39", optional = true, features = ["bundled"]}
serde_json = {version = "1", optional = true, features = ["preserve_order"]}
serde_yaml = {version = "0.9", optional = true}
tar = {version = "0.4", optional = true}
toml = {version = "1.1", optional = true}
zip = {version = "8.5", optional = true, default-features = false, features = ["deflate"]}

[dev-dependencies]
pretty_assertions = "1"
rstest = "0.26"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true
